@@ -31,7 +31,9 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.context.SpringBootTest.WebEnvironment;
 import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.boot.test.mock.mockito.SpyBean;
 import org.springframework.boot.test.web.client.TestRestTemplate;
+import org.springframework.boot.web.client.RestTemplateBuilder;
 import org.springframework.context.annotation.Import;
 import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpStatus;
@@ -49,12 +51,19 @@ import uk.gov.gchq.palisade.contract.data.common.ContractTestData;
 import uk.gov.gchq.palisade.contract.data.common.TestSerDesConfig;
 import uk.gov.gchq.palisade.service.data.DataApplication;
 import uk.gov.gchq.palisade.service.data.model.AuditErrorMessage;
+import uk.gov.gchq.palisade.service.data.model.AuditMessage;
 import uk.gov.gchq.palisade.service.data.model.AuditSuccessMessage;
 import uk.gov.gchq.palisade.service.data.model.DataRequest;
+import uk.gov.gchq.palisade.service.data.model.ExceptionSource;
 import uk.gov.gchq.palisade.service.data.model.Token;
-import uk.gov.gchq.palisade.service.data.service.AuditableDataService;
+import uk.gov.gchq.palisade.service.data.service.ReadChunkedDataService;
+import uk.gov.gchq.palisade.service.data.service.authorisation.AuditableAuthorisationService;
+import uk.gov.gchq.palisade.service.data.service.reader.SimpleDataReader;
 import uk.gov.gchq.palisade.service.data.stream.ProducerTopicConfiguration;
+import uk.gov.gchq.palisade.service.data.web.AkkaHttpServer;
 
+import java.io.ByteArrayInputStream;
+import java.nio.charset.Charset;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.LinkedList;
@@ -67,10 +76,10 @@ import java.util.stream.LongStream;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.when;
 import static uk.gov.gchq.palisade.contract.data.common.ContractTestData.AUDITABLE_DATA_REQUEST;
 import static uk.gov.gchq.palisade.contract.data.common.ContractTestData.AUDITABLE_DATA_REQUEST_WITH_ERROR;
-import static uk.gov.gchq.palisade.contract.data.common.ContractTestData.AUDITABLE_DATA_RESPONSE;
 
 /**
  * An external requirement of the service is to audit the client's requests.
@@ -78,18 +87,21 @@ import static uk.gov.gchq.palisade.contract.data.common.ContractTestData.AUDITAB
  */
 @SpringBootTest(
         classes = DataApplication.class,
-        webEnvironment = WebEnvironment.RANDOM_PORT,
-        properties = {"akka.discovery.config.services.kafka.from-config=false"}
+        webEnvironment = WebEnvironment.MOCK,
+        properties = {"akka.discovery.config.services.kafka.from-config=false", "server.port=0"}
 )
 @Import({KafkaTestConfiguration.class})
 @ActiveProfiles({"akka-test", "testcontainers"})
 class KafkaContractTest {
     public static final String READ_CHUNKED = "/read/chunked";
 
-    @Autowired
     private TestRestTemplate restTemplate;
     @MockBean
-    private AuditableDataService serviceMock;
+    private AuditableAuthorisationService serviceMock;
+    @SpyBean
+    private SimpleDataReader readerSpy;
+    @Autowired
+    private ReadChunkedDataService writer;
     @Autowired
     private KafkaContainer kafkaContainer;
     @Autowired
@@ -98,12 +110,17 @@ class KafkaContractTest {
     private Materializer akkaMaterializer;
     @Autowired
     private ProducerTopicConfiguration producerTopicConfiguration;
+    @Autowired
+    private AkkaHttpServer akkaHttpServer;
 
     @BeforeEach
     void setUp() {
+        var localAddress = akkaHttpServer.getServerBinding().join().localAddress();
+        var rootUri = "http://localhost:" + localAddress.getPort();
+        restTemplate = new TestRestTemplate(new RestTemplateBuilder().rootUri(rootUri));
+
         MappingJackson2HttpMessageConverter converter = new MappingJackson2HttpMessageConverter();
-        converter.setSupportedMediaTypes(
-                Arrays.asList(MediaType.APPLICATION_JSON, MediaType.APPLICATION_OCTET_STREAM));
+        converter.setSupportedMediaTypes(List.of(MediaType.APPLICATION_JSON, MediaType.APPLICATION_OCTET_STREAM));
         restTemplate.getRestTemplate().setMessageConverters(Arrays.asList(converter, new FormHttpMessageConverter()));
     }
 
@@ -133,8 +150,10 @@ class KafkaContractTest {
         HttpEntity<DataRequest> entity = new HttpEntity<>(ContractTestData.REQUEST_OBJ, new LinkedMultiValueMap<>(headers));
         ResponseEntity<Void> response = restTemplate.postForEntity(READ_CHUNKED, entity, Void.class);
 
-        // Then - the REST request was accepted
-        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.INTERNAL_SERVER_ERROR);
+        // Then - the REST request was accepted, and returned a FORBIDDEN
+        assertThat(response.getStatusCode())
+                .as("Check the response was FORBIDDEN as the client has no authorisation to read the data")
+                .isEqualTo(HttpStatus.FORBIDDEN);
         // When - results are pulled from the output stream
         Probe<ConsumerRecord<String, AuditErrorMessage>> resultSeq = errorProbe.request(1);
 
@@ -148,15 +167,14 @@ class KafkaContractTest {
                 .allSatisfy(result -> {
                     assertThat(result.value())
                             .as("Recursively check the result against the AuditErrorMessage, ignoring the error")
-                            .usingRecursiveComparison()
-                            .ignoringFieldsOfTypes(Throwable.class)
-                            .isEqualTo(ContractTestData.AUDIT_ERROR_MESSAGE);
+                            .extracting(AuditMessage::getAttributes)
+                            .isEqualTo(Map.of(ExceptionSource.ATTRIBUTE_KEY, ExceptionSource.AUTHORISED_REQUEST.toString()));
 
                     assertThat(result.value())
                             .as("Check the Error Message in the AuditErrorMessage object")
                             .extracting(AuditErrorMessage::getError)
                             .extracting(Throwable::getMessage)
-                            .isEqualTo(ContractTestData.AUDIT_ERROR_MESSAGE.getError().getMessage());
+                            .isEqualTo("Authorisation denied for request " + ContractTestData.REQUEST_OBJ.toString());
 
                     assertThat(result.headers().lastHeader(Token.HEADER).value())
                             .as("Check the bytes of the request token")
@@ -171,11 +189,13 @@ class KafkaContractTest {
     @Test
     @DirtiesContext
     void testRestEndpointSuccess() {
+        writer.setReaders(Collections.singleton(readerSpy));
+
         when(serviceMock.authoriseRequest(any()))
                 .thenReturn(CompletableFuture.completedFuture(AUDITABLE_DATA_REQUEST));
 
-        when(serviceMock.read(any(), any()))
-                .thenReturn(CompletableFuture.completedFuture(AUDITABLE_DATA_RESPONSE));
+        doReturn(new ByteArrayInputStream("some data".getBytes(Charset.defaultCharset())))
+                .when(readerSpy).read(any());
 
         // Given - we are already listening to the service success output
         ConsumerSettings<String, AuditSuccessMessage> consumerSettings = ConsumerSettings
@@ -194,6 +214,7 @@ class KafkaContractTest {
 
         // Then - the REST request was accepted
         assertThat(response.getStatusCode())
+                .as("Check the response was OK as the client is authorised to read the data")
                 .isEqualTo(HttpStatus.OK);
         // When - results are pulled from the output stream
         Probe<ConsumerRecord<String, AuditSuccessMessage>> resultSeq = probe.request(1);
@@ -209,6 +230,7 @@ class KafkaContractTest {
                     assertThat(result.value())
                             .as("Recursivley check the result against the AuditSuccessMessage")
                             .usingRecursiveComparison()
+                            .ignoringFields("timestamp")
                             .isEqualTo(ContractTestData.AUDIT_SUCCESS_MESSAGE);
 
                     assertThat(result.headers().lastHeader(Token.HEADER).value())
